<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_Sensor_GrowMedium_PH" Id="{2e6af340-be58-481e-a17f-47bf14761533}" SpecialFunc="None">
    <Declaration><![CDATA[{attribute 'OPC.UA.DA.StructuredType' := '1'}
FUNCTION_BLOCK FB_Sensor_GrowMedium_PH EXTENDS FB_BaseSensor IMPLEMENTS I_Device, I_Sensor

VAR

	bCAL: BOOL := FALSE;
	eSMState: (WAIT, CAL_4, CAL_7, CALC_CORRECTION) := WAIT;
	
END_VAR
	
VAR PERSISTENT 

	nPH4_val: REAL;
	nPH7_val: REAL;
	
	b4High_0_20High_1: BOOL := TRUE;
	
	nCurveGradient: REAL := 6.0/16.0; // Sensor range is PH 3 to 9 over 16mA range (4-20mA)
	nCurveOffset: REAL := 1.5; 
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[calculate();
filter();

// Detect if any buttons in ignition have been pressed for Calibration
IF bCAL THEN 
	bCAL := FALSE;
	CASE eSMState OF
		WAIT:
			eSMState := CAL_4;
		CAL_4:
			eSMState := CAL_7;
		CAL_7:
			eSMState := CALC_CORRECTION;
	END_CASE
END_IF




CASE eSMState OF 
	WAIT:
		// wait here for a calibration command to be received
		eState := E_DeviceState.RUNNING;
		
	CAL_4:
		nPH4_val := nFilteredCurrent;
		eState := E_DeviceState.CAL_STEP1;

	CAL_7:
		nPH7_val := nFilteredCurrent;
		eState := E_DeviceState.CAL_STEP2;

	CALC_CORRECTION:
		nCurveGradient := 3.0 / (nPH7_val - nPH4_val);
		nCurveOffset := 4.0 - (nCurveGradient * nPH4_val);
		eState := E_DeviceState.CAL_STEP3;
		eSMState := WAIT;
		
END_CASE
]]></ST>
    </Implementation>
    <Method Name="calculate" Id="{1a21ea4a-7185-40e5-ad12-271de796c1a1}">
      <Declaration><![CDATA[METHOD PRIVATE calculate : BOOL
VAR_INPUT
	
END_VAR

]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF b4High_0_20High_1 THEN
	nMeasuredCurrent := (INT_TO_REAL(nRawInput)/GVL.nMaxADCOutput)*16.0 + 4.0; // in mA
ELSE
	nMeasuredCurrent := 20.0 - (INT_TO_REAL(nRawInput)/GVL.nMaxADCOutput)*16.00; 
END_IF


// nCurrentValue := (nCurveGradient * nMeasuredCurrent) + nCurveOffset; 

nCurrentValue := (nCurveGradient * nFilteredCurrent) + nCurveOffset; // delete this eventually

nCurrentValueFiltered := (nCurveGradient * nFilteredCurrent) + nCurveOffset;]]></ST>
      </Implementation>
    </Method>
    <Method Name="calibrate" Id="{dd904280-ebf4-4cf1-b716-1fbeb3afc91c}">
      <Declaration><![CDATA[METHOD calibrate : BOOL
VAR_INPUT
	
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
bCAL := TRUE;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="disable" Id="{6f830881-a44e-482d-82ba-5b0a54100606}">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD disable : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[bEnable := FALSE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="enable" Id="{ea4edaef-daa0-42ea-b0fb-0ddd0b2409a5}">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD enable : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[bEnable := TRUE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="FB_init" Id="{0fadeb0e-12ef-405e-836e-045e66683241}">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD FB_init : BOOL
VAR_INPUT
	(* if TRUE, the retain variables are initialized (warm start / cold start)*)
	bInitRetains	: BOOL;
	(* if TRUE, the instance afterwards gets moved into the copy code (online change)*)
	bInCopyCode	: BOOL;
	
	SensorID	: STRING(80);
	SensorDescr	: STRING(255);
	SensorType	: E_SensorType;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[sID := SensorID;
sDescr := SensorDescr;
eSensorType := SensorType;]]></ST>
      </Implementation>
    </Method>
    <Method Name="getType" Id="{bef06be2-6fd2-4d79-af65-7e7716e0d616}">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD getType : E_SensorType
]]></Declaration>
      <Implementation>
        <ST><![CDATA[getType := eSensorType;]]></ST>
      </Implementation>
    </Method>
    <Method Name="getValue" Id="{0738a069-70e3-49a3-bcf0-ce82822f4b5e}">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD getValue : REAL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[getValue := nCurrentValue;]]></ST>
      </Implementation>
    </Method>
    <Method Name="write" Id="{c8bf41da-8610-4c78-805f-b1668d4312ec}">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD write : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// use this method to initiated a hardware read from assigned IO if required
]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_Sensor_GrowMedium_PH">
      <LineId Id="9" Count="0" />
      <LineId Id="414" Count="0" />
      <LineId Id="274" Count="0" />
      <LineId Id="254" Count="0" />
      <LineId Id="336" Count="9" />
      <LineId Id="263" Count="0" />
      <LineId Id="388" Count="1" />
      <LineId Id="396" Count="0" />
      <LineId Id="395" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="234" Count="0" />
      <LineId Id="237" Count="0" />
      <LineId Id="373" Count="0" />
      <LineId Id="247" Count="0" />
      <LineId Id="238" Count="0" />
      <LineId Id="280" Count="0" />
      <LineId Id="374" Count="0" />
      <LineId Id="282" Count="0" />
      <LineId Id="284" Count="0" />
      <LineId Id="288" Count="0" />
      <LineId Id="375" Count="0" />
      <LineId Id="291" Count="2" />
      <LineId Id="297" Count="0" />
      <LineId Id="376" Count="0" />
      <LineId Id="298" Count="1" />
      <LineId Id="235" Count="0" />
      <LineId Id="56" Count="0" />
    </LineIds>
    <LineIds Name="FB_Sensor_GrowMedium_PH.calculate">
      <LineId Id="62" Count="0" />
      <LineId Id="64" Count="3" />
      <LineId Id="63" Count="0" />
      <LineId Id="47" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="74" Count="1" />
      <LineId Id="73" Count="0" />
      <LineId Id="41" Count="0" />
    </LineIds>
    <LineIds Name="FB_Sensor_GrowMedium_PH.calibrate">
      <LineId Id="20" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="14" Count="0" />
    </LineIds>
    <LineIds Name="FB_Sensor_GrowMedium_PH.disable">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_Sensor_GrowMedium_PH.enable">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_Sensor_GrowMedium_PH.FB_init">
      <LineId Id="13" Count="2" />
    </LineIds>
    <LineIds Name="FB_Sensor_GrowMedium_PH.getType">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_Sensor_GrowMedium_PH.getValue">
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_Sensor_GrowMedium_PH.write">
      <LineId Id="4" Count="0" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>